# demo_vm_drone_sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  system_config.h  test.dts  vm_drone_sim.camkes
Tools/cpp-proxy/: CMakeLists.txt  CmdOptions.cc  CmdOptions.hh  README.md  cpp_proxy.cc  run_proxy.sh
Tools/drone_mission/: CMakeLists.txt  README.md  drone_mission.cpp
Tools/px4-patch/: README.md  px4.patch
components/ChanMux/: ChanMux_config.c
components/NIC_virtio/: NIC_virtio.cmake  driver.c
components/SerialFilter/: SerialFilter.c  SerialFilter.camkes
components/SerialFilter/mavlink_filter/: geofence.c  geofence.h  mavlink_filter.c  mavlink_filter.h
components/SimCoupler/: SimCoupler.c  SimCoupler.camkes
libs/mavlink_filter/: geofence.c  mavlink_filter.c  mavlink_filter.h
libs/util/: socket_helper.c  socket_helper.h
overlay_files/init_scripts/: drone_mission  fly_mission  mission_control  ping_test  send_tcp.py  takeoff_and_land  test.sh  udp_echo
plat/qemu-arm-virt/: plat.camkes  plat.cmake  plat_system_config.h
plat/zynqmp/: plat.camkes  plat.cmake  plat_nic.camkes
